--- a/apache-jmeter-4.0/bin/reportgenerator.properties
+++ b/apache-jmeter-4.0/bin/reportgenerator.properties
@@ -57,14 +57,14 @@
 #jmeter.reportgenerator.sample_filter=
 
 # Sets the temporary directory used by the generation process if it needs file I/O operations.
-jmeter.reportgenerator.temp_dir=temp
+#jmeter.reportgenerator.temp_dir=temp
 
 # Sets the size of the sliding window used by percentile evaluation.
 # Caution : higher value provides a better accuracy but needs more memory.
 #jmeter.reportgenerator.statistic_window = 20000
 
 # Configure this property to change the report title
-jmeter.reportgenerator.report_title=Cake Api Report
+#jmeter.reportgenerator.report_title=Apache JMeter Dashboard
 
 # Default format
 #jmeter.reportgenerator.date_format=yyyyMMddHHmmss
